Fix assertion about being too late to set quirks style sheet.  (Bug 450191)  r+sr=bzbarsky  a=blocking1.9.1+